Fixes:
- Removing margin-top.
- Hiding the side menu while it is not visible.
- Removing padding for bullet points in experience.
- Projects video section responsiveness fixed.
- Added a GitHub link for the e-commerce project.
- Added anchor element to trigger the animation in the contact section to ensure the button shows on mobile devices.
- Hiding 3D frame for picture when mobile and picture resized properly.
- Built static files.

--- a/src/app/components/aboutme/aboutme.component.scss
+++ b/src/app/components/aboutme/aboutme.component.scss
@@ -11,7 +11,7 @@
     width: 324px;
     margin: auto;
 
-    &:after {
+    &::after {
       content: '';
       border: 2px solid $Green;
       z-index: 0;
@@ -20,9 +20,8 @@
       width: 250px;
       height: 321px;
       border-radius: 3px;
-      bottom: 306px;
-      left: 23px;
-
+      bottom: 19rem;
+      left: 1rem;
     }
 
     img {
@@ -71,34 +70,17 @@
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
   .about {
-    .about-img-container img {
-      width: 200px;
-      height: 200px;
-    }
-
-    .about-img-container:after {
-      width: 200px;
-      height: 200px;
-      bottom: 190px;
-      left: 74px;
-    }
-  }
-}
-
-@media (max-width: 500px) {
-  .about {
-
     .about-img-container {
       width: 100%;
 
       img {
-        width: 180px;
-        height: 180px;
+        width: 150px;
+        height: 100%;
       }
 
-      &:after {
+      &::after {
         display: none;
       }
     }
