--- a/src/app/components/experience/experience.component.scss
+++ b/src/app/components/experience/experience.component.scss
@@ -111,11 +111,6 @@
 
 
 @media (max-width: 768px) {
-  .jobs {
-    .job-description {
-      padding: 0px;
-    }
-  }
 
   ::ng-deep .jobs-tabs {
     display: block !important;
